
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int u8 ;
struct b43legacy_phy {int radio_ver; int* nrssi_lt; int type; } ;
struct b43legacy_wldev {TYPE_3__* dev; struct b43legacy_phy phy; } ;
typedef int s8 ;
typedef int s32 ;
struct TYPE_6__ {TYPE_2__* bus; } ;
struct TYPE_4__ {int boardflags_lo; } ;
struct TYPE_5__ {TYPE_1__ sprom; } ;


 int B43legacy_BFL_RSSI ;
 int B43legacy_PHYTYPE_G ;

__attribute__((used)) static s8 b43legacy_rssi_postprocess(struct b43legacy_wldev *dev,
         u8 in_rssi, int ofdm,
         int adjust_2053, int adjust_2050)
{
 struct b43legacy_phy *phy = &dev->phy;
 s32 tmp;

 switch (phy->radio_ver) {
 case 0x2050:
  if (ofdm) {
   tmp = in_rssi;
   if (tmp > 127)
    tmp -= 256;
   tmp *= 73;
   tmp /= 64;
   if (adjust_2050)
    tmp += 25;
   else
    tmp -= 3;
  } else {
   if (dev->dev->bus->sprom.boardflags_lo
       & B43legacy_BFL_RSSI) {
    if (in_rssi > 63)
     in_rssi = 63;
    tmp = phy->nrssi_lt[in_rssi];
    tmp = 31 - tmp;
    tmp *= -131;
    tmp /= 128;
    tmp -= 57;
   } else {
    tmp = in_rssi;
    tmp = 31 - tmp;
    tmp *= -149;
    tmp /= 128;
    tmp -= 68;
   }
   if (phy->type == B43legacy_PHYTYPE_G &&
       adjust_2050)
    tmp += 25;
  }
  break;
 case 0x2060:
  if (in_rssi > 127)
   tmp = in_rssi - 256;
  else
   tmp = in_rssi;
  break;
 default:
  tmp = in_rssi;
  tmp -= 11;
  tmp *= 103;
  tmp /= 64;
  if (adjust_2053)
   tmp -= 109;
  else
   tmp -= 83;
 }

 return (s8)tmp;
}
